bugs fixed for template api
